--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,18 +1,10 @@
-<h1>私のおすすめ</h1>
-<%= form_for (@post) do |f| %>
+<div class="container">
+<h1>わたしのオススメ</h1>
+</div>
 
-	<label>画像</label>
-			<%= f.file_field :image, class:"form-control" %>
+<%= render 'form' %>
 
-	<div class="form-group">
-		 <label>商品名</label>
-	  		<%= f.text_field :name, class: "form-control" %>
-	</div>
 
-	<div class="form-group">
-		 <label>説明文</label>
-	  		<%= f.text_area :description, class: "form-control" %>
-	</div>
 
 	<div class="form-group">
 		 <label>URL</label>
@@ -23,4 +15,3 @@
 	  		<%= f.submit '保存', class: "btn btn-primary" %>
 	</div>
 <% end %>
-
