--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,11 @@
 
 
 <div class="container">
-<div class="alert alert-success">
-  <%= notice %>
-</div>
-
+<% if flash[:notice] %>
+  <div class="alert alert-success">
+    <%= notice %>
+  </div>
+<% end %>
 	  <table>
 		<tr>
 			<th>画像</th>
@@ -25,12 +26,11 @@
 			<td><%= post.name %></td>
 			
 			<td><%= post.description %></td>
-			<td><%= link_to '商品情報(サイトに移ります)'%></td>
+			<td><%= link_to '商品情報(サイトに移ります)', post.where %></td>
 			<td><%= link_to "詳細", post_path(post), class: "btn btn-success" %>
 			    <%= link_to "編集", edit_post_path(post), class: "btn btn-warning" %>		
 				<%= link_to "削除", post_path(post), method: "delete", class: "btn btn-danger" %></td>
-
-		</tr>
+			</tr>
 
 	    <% end %>
 	</table>
