--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,28 +6,57 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body style="padding-top: 90px;,font-family: 'Lucida Console';">
 
 	<header>
-	  <nav class="navbar navbar-inverse navbar-static-top">
+	  <nav class="navbar navbar-default navbar-fixed-top navbar-top">
 		  <div class="container-fluid">
-				
-			  <div class="navbar-header">
-				  <a class="navbar-brand">Poi'!</a>
-			  </div>
-			    <div class="collapse navbar-collapse navbar-right" id="navbarExmple1">
-				  <ul class="nav navbar-nav">
-					  <li><%= link_to "Poi'!する","/posts/new" %></li>
-					  <li><%= link_to "Login","/users/sign_in" %></li>
-				  </ul>
-			  </div>
+		           <form class="navbar-form navbar-left" role="search">
+					  <div class="form-group">
+					     <input type="text" class="form-control" placeholder= "Poi'をさがす">
+					  </div>
+					  <button type="submit" class="btn btn-default"><i class="fa fa-search" aria-hidden="true"></i></button>
+				  </form>
+				  <h1 class="logo"><%= link_to "Poi'!","/" %></h1>	
+			      <div class="collapse navbar-collapse navbar-right" id="navbarExmple1">
+				      <ul class="nav navbar-nav">
+				      	<% if user_signed_in? %>
+					     <li><%= link_to "Poi'!する","/posts/new" %></li>
+					     <li><%= current_user.email %>さん、こんにちは</li>
+					     <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+					    <% else %>
+					     <li><%= link_to "ログイン","/users/sign_in" %></li>
+					     <li><%= link_to "新規登録","/users/sign_up" %></li>
+					    <% end %>
+				     </ul>
+			      </div>
 		  </div>
 	  </nav>
 	</header>
 
-  <div class="container">
-	  <%= yield %>
+  <div class="container-fluid">
+  	 <div class="row">
+  	   <div class="col-sm-2">
+  	     <ul class="list-group">
+  	       <li class="list-group-item">aaaa</li>
+  	       <li class="list-group-item">aaaa</li>
+  	       <li class="list-group-item">aaaa</li>
+  	       <li class="list-group-item">aaaa</li>
+  	       <li class="list-group-item">aaaa</li>
+  	       <li class="list-group-item">aaaa</li>
+  	       <li class="list-group-item">aaaa</li>
+  	     </ul>
+  	   </div>
+	   <div class="col-sm-10"><%= yield %></div>
+	 </div>
   </div>
+
+  <footer>
+  	  <nav class="navbar navbar-default navbar-bottom">
+
+  	  </nav>
+
+  </footer>
 
 </body>
 </html>
