--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,3 @@
-<div class="container">
 	<table>
 		<tr>
 			<th>画像</th>
@@ -18,7 +17,7 @@
 			<td><%= link_to "一覧画面へ", posts_path(@post), class: "btn btn-success" %>
 				<%= link_to "編集する", edit_post_path(@post), class: "btn btn-warning" %>		
 				<%= link_to "削除する", post_path(@post), method: "delete", class: "btn btn-danger" %>
-				<%= link_to "like♡", post_path(@post), class: "btn btn-info" %>
+				  <%= link_to "like♡", post_vote_path(@post), method: :post, class: "btn btn-info" %>
 				<button type="button" name="" value="">
 				<font size="4">♡</font>
 				</button>
@@ -26,4 +25,3 @@
 			<td></td>	
 		</tr>
 	</table>
-</div>
