菊地、タグつけました

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,13 +38,13 @@
   	 <div class="row">
   	   <div class="col-sm-2">
   	     <ul class="list-group">
-  	       <li class="list-group-item">aaaa</li>
-  	       <li class="list-group-item">aaaa</li>
-  	       <li class="list-group-item">aaaa</li>
-  	       <li class="list-group-item">aaaa</li>
-  	       <li class="list-group-item">aaaa</li>
-  	       <li class="list-group-item">aaaa</li>
-  	       <li class="list-group-item">aaaa</li>
+  	       <li class="list-group-item">日用品</li>
+  	       <li class="list-group-item">インテリア</li>
+  	       <li class="list-group-item">ホビー</li>
+  	       <li class="list-group-item">家電</li>
+  	       <li class="list-group-item">レジャー</li>
+  	       <li class="list-group-item">自動車</li>
+  	       <li class="list-group-item">その他</li>
   	     </ul>
   	   </div>
 	   <div class="col-sm-10"><%= yield %></div>
