--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,6 +20,11 @@
 		  	 <%= f.url_field :where, class: "form-control" %>
 		</div>
 
+		<div class="form-group">
+		 	 <%= f.label :category_list, "タグを選んでください(英字カンマ区切り)  日用品,インテリア,ホビー,家電,レジャー,自動車,その他" %><br>
+		  	 <%= text_field_tag 'post[category_list]', @post.category_list.join(',') %>
+		</div>
+
 		<div class="form-gruop">
 		  	 <%= f.submit '保存', class: "btn btn-primary" %>
 		</div>
