--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,7 @@
 			<th style="letter-spacing:12px;">商品名</th>
 			<th>説明</th>
 			<th>URL</th>
+			<th>タグ</th>
 			<th></th>
 			
 		</tr>
@@ -24,10 +25,12 @@
 			
 			<td><%= post.description %></td>
 			<td><%= link_to '商品情報(サイトに移ります)', post.where %></td>
+			<td><%= render 'posts/tag_list', tag_list: post.category_list %></td>
 			<td><%= link_to "詳細", post_path(post), class: "btn btn-success" %>
 			    <%= link_to "編集", edit_post_path(post), class: "btn btn-warning" %>		
 				<%= link_to "削除", post_path(post), method: "delete", class: "btn btn-danger" %></td>
 			</tr>
+
 
 	    <% end %>
 	</table>
