--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,7 +22,7 @@
 
 		<div class="form-group">
 		 	 <%= f.label :category_list, "タグを選んでください(英字カンマ区切り)  日用品,インテリア,ホビー,家電,レジャー,自動車,その他" %><br>
-		  	 <%= text_field_tag 'post[category_list]', @post.category_list.join(',') %>
+		  	 <%= text_field_tag 'post[category_list]', @post.category_list.join(','), "data-role"=>"tagsinput" %>
 		</div>
 
 		<div class="form-gruop">
