--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,8 +1,8 @@
 table th{
   color: #fff;
-  background-color: #258;
+  background-color: #0066ff;
   background:-moz-linear-gradient(rgba(34,85,136,0.7), rgba(34,85,136,0.9) 50%);
-  background:-webkit-gradient(linear, 100% 0%, 100% 50%, from(rgba(34,85,136,0.7)), to(rgba(34,85,136,0.9)));
+  background:-webkit-gradient(linear, 100% 0%, 100% 50%, from(rgba(33,150,243,0.5)), to(rgba(33,150,243,0.9)));
   font-weight: bold;
   border-left:1px solid #258;
   border-top:1px solid #258;
