--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,16 @@
+<% if @post.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= @post.errors.count %>件のエラーがあります。</h2>
+ 
+    <ul>
+      <% @post.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+
+  </div>
+<% end %>
+
 <%= form_for (@post) do |f| %>
 		<label>画像</label>
 			 <%= f.file_field :image, class:"form-control" %>
