--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,10 +1,10 @@
 <% if @post.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= @post.errors.count %>件のエラーがあります。</h2>
+  <div id="error_explanation", class="alert alert-danger">
+    <h2><%= @post.errors.count %>件、未入力です</h2>
  
     <ul>
-      <% @post.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+      <% @post.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
       <% end %>
     </ul>
 
