--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,11 +51,9 @@
 	 </div>
   </div>
 
+  <div class="watermark2"></div>
   <footer>
-  	  <nav class="navbar navbar-default navbar-bottom">
-
-  	  </nav>
-
+  	footer
   </footer>
 
 </body>
