--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,11 +19,46 @@
 			<td><%= link_to "一覧画面へ", posts_path(@post), class: "btn btn-success" %>
 				<%= link_to "編集する", edit_post_path(@post), class: "btn btn-warning" %>		
 				<%= link_to "削除する", post_path(@post), method: "delete", class: "btn btn-danger" %>
-				  <%= link_to "like♡", post_vote_path(@post), method: :post, class: "btn btn-info" %>
-				<button type="button" name="" value="">
-				<font size="4">♡</font>
-				</button>
+
+				<% if user_signed_in? %>
+					<% if @post.voted_by? current_user %>		　
+					  <%= link_to "いいね解除", post_votes_path(@post), method: :delete, class: "btn btn-info"%>
+					<% else %>
+					 <%= link_to "like♡", post_votes_path(@post), method: :post, class: "btn btn-info" %>  
+	            	<% end %>           	
+	            <% end %>
 			</td>
 			<td></td>	
 		</tr>
 	</table>
+
+	<h2>このPoi'に対するコメント</h2>
+	<% @post.comments.each do |comment| %>
+	<div class="panel panel-default">
+		<div class="panel-heading"><%= comment.commmenter %></div>
+		<div class="panel-body"><strong><%= comment.body %></strong></div>
+	</div>
+	<% end %>
+
+
+	<h2> このPoi'にコメントする　</h2>
+		<% if user_signed_in? %>
+			<%= form_for([@post,@post.comments.build]) do |f| %>
+				<div class="form-group">
+					<%= f.label "name" %><br>
+					<%= f.text_field :commmenter %>
+				</div>
+					
+				<div class="form-group">
+					<%= f.label :body %>
+					<%= f.text_area :body %>
+				</div>
+				<div class="btn btn-primary">
+					<%= f.submit "コメント送信" %>
+				</div>
+			<% end %>
+
+		<% else %>
+			<%= link_to "ログイン", "/users/sign_in" %>
+		<% end %>
+
