--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body style="padding-top: 90px;,font-family: 'Lucida Console';">
 
+  <div class="main-container">
+
 	<header>
 	  <nav class="navbar navbar-default navbar-fixed-top navbar-top">
 		  <div class="container-fluid">
@@ -34,7 +36,7 @@
 	  </nav>
 	</header>
 
-  <div class="container-fluid">
+  <div class="container-fluid main-padding">
   	 <div class="row">
   	   <div class="col-sm-2">
   	     <ul class="list-group">
@@ -55,6 +57,8 @@
   <footer>
   	footer
   </footer>
+
+  </div>
 
 </body>
 </html>
