--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
   	 <div class="row">
   	   <div class="col-sm-2">
   	     <ul class="list-group">
+  	       <li class="list-group-item">カテゴリー</li>
   	       <li class="list-group-item"><%= link_to "日用品","/" %></li>
   	       <li class="list-group-item"><%= link_to "インテリア","/" %></li>
   	       <li class="list-group-item"><%= link_to "ホビー","/" %></li>
