--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 				      <ul class="nav navbar-nav">
 				      	<% if user_signed_in? %>
 					     <li><%= link_to "Poi'!する","/posts/new" %></li>
-					     <li><%= current_user.email %>さん、こんにちは</li>
+					     <li><%= link_to current_user.email, new_prof_path %>さん、こんにちは</li>
 					     <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
 					    <% else %>
 					     <li><%= link_to "ログイン","/users/sign_in" %></li>
