--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 				      <ul class="nav navbar-nav">
 				      	<% if user_signed_in? %>
 					     <li><%= link_to "Poi'!する","/posts/new" %></li>
-					     <li><%= link_to current_user.email, new_prof_path %>さん、こんにちは</li>
+					     <li><%= link_to current_user.email, new_prof_path %>こんにちは</li>
 					     <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
 					    <% else %>
 					     <li><%= link_to "ログイン","/users/sign_in" %></li>
@@ -56,7 +56,7 @@
 
   <div class="watermark2"></div>
   <footer>
-  	2016 ProjectK,Inc.ALL rights reserved
+  	2016 ProjectK,Inc. ALL Rights Reserved
   </footer>
 
   </div>
