--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -105,3 +105,17 @@ footer{
 	text-align: center;
 	line-height: 100px;
 }
+
+
+/*@media ( max-width : 480px ) {
+	width: 100%
+}
+*/
+
+
+
+
+
+
+
+
